swatting a few sonar snags